# CLI_Snowflake

./: .env.example  .gitignore  AUTOMATION_COMPLETE.md  AUTO_SYNC_README.md  COMPLETE_SYNC_RESULTS.md  Employee_push_api.json  FABRIC_SAMPLES_SYNC_RESULTS.md  GIT_PUSH_GUIDE.md  HOW_TO_CHECK_SNOWFLAKE_DATA.md  LIVE_SYNC_RESULTS.md  NEW_REP_SYNC_VERIFICATION.md  README.md  SEMABRIDGE_FEATURE_CHECKLIST.md  SNOWFLAKE_ACCOUNT_RESULTS.md  SNOWFLAKE_UI_GUIDE.md  SYNC_VERIFICATION_REPORT.md  VIEW_DATABASE_GUIDE.md  WHERE_IS_DATA_SAVED.md  advanced_fabric_sync.py  annual_push_api.json  auto_sync.py  automated_sync_monitor.py  check_annual.py  check_annual_details.py  check_demo_rest.py  check_demo_table.py  check_demo_tables_dax.py  check_employee_details.py  check_new_rep.py  check_new_rep_in_fabric.py  check_new_tables.py  check_semantic_metadata.py  check_snowflake_models.py  check_snowflake_tables.py  check_sync_status.py  cleanup_datasets.py  compare_models.py  continent_push_api.json  create_complete_push_dataset.py  create_custom_table.py  (+60 more)
metadata/: README.md  demo_table.yaml  employee.yaml  new_rep.yaml
semantic_sync/: __init__.py  main.py
semantic_sync/auth/: __init__.py  oauth.py
semantic_sync/config/: __init__.py  default.yaml  settings.py
semantic_sync/core/: __init__.py  auto_metadata.py  change_detector.py  dax_transpiler.py  duckdb_repository.py  fabric_client.py  fabric_model_parser.py  fabric_snowflake_semantic_pipeline.py  fabric_xmla_client.py  metadata_registry.py  models.py  onelake_client.py  semantic_formatter.py  semantic_updater.py  snowflake_reader.py  snowflake_semantic_writer.py  snowflake_writer.py  sqlite_rollback.py
semantic_sync/utils/: __init__.py  exceptions.py  logger.py
sql/: 01_semantic_views.sql  02_row_level_security.sql  03_performance_optimization.sql  04_powerbi_directquery_setup.sql
tests/: __init__.py  test_change_detector.py  test_data_sync_validation.py  test_dax_transpiler.py  test_duckdb_repository.py  test_formatter.py  test_models.py  test_sqlite_rollback.py
tests/fixtures/: __init__.py  sample_fabric_data.py
